[package]
name = "megaput"
version = "0.1.0"
authors = ["Justin Ferrieu <justin@ferrieu.fr>"]
edition = "2018"

[dependencies]
clap = "2.33.3"
csv = "1.1"
enigo = "0.0.14"
hyper = "0.13.7"
pretty_env_logger = "0.4.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.57"
tokio = { version = "0.2", features = ["full"] }
